# StaticAnalyzer-Algorithm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dockerfile
docs/: GUIDELINE.md
include/analysis/: Analysis.h  AnalysisFactory.h  AnalysisResult.h
include/framework/: ASTManager.h  CallGraph.h
include/myanalysis/: Analysis.h  AnalysisFactory.h  AnalysisResult.h
include/myanalysis/dataflow/: MemoryLeak.h  NullPointer.h  UseBeforeDef.h
lib/: CMakeLists.txt
lib/AlgorithmService/: CMakeLists.txt  algservice.proto
lib/analysis/: Analysis.cpp  AnalysisFactory.cpp  AnalysisResult.cpp  CMakeLists.txt  EchoAnalysis.cpp  UninitializedVariableAnalysis.cpp
lib/framework/: ASTManager.cpp  CallGraph.cpp  Config.cpp
lib/myanalysis/: AlwaysFailedAnalysis.cpp  Analysis.cpp  AnalysisFactory.cpp  AnalysisResult.cpp  ArithmeticIntensityAnalysis.cpp  ArrayIndexOutOfBoundsAnalysis.cpp  CMakeLists.txt  DeadCodeEliminationAnalysis.cpp  DivisionByZeroAnalysis.cpp  MemoryLeakAnalysis.cpp  NullPointerDereferenceAnalysis.cpp  UninitializedVariableAnalysis.cpp  UseBeforeDefAnalysis.cpp
lib/myanalysis/dataflow/: MemoryLeak.cpp  NullPointer.cpp  UseBeforeDef.cpp
resources/ArithmeticIntensityReduce/: main.cpp
resources/ArrayIndexOutOfBounds/: main.cpp
resources/DeadCodeElimination/: main.cpp
resources/DivisionByZero/: main.cpp
resources/MemoryLeak/: main.cpp
resources/NullPointer/: main.cpp
resources/UnitVar/: UnitVarTest.cpp
resources/UseBeforeDef/: UseBeforeDefTest.cpp
tests/: CMakeLists.txt  TestArithmeticIntensityReduce.cpp  TestArrayIndexOutOfBounds.cpp  TestDeadCodeElimination.cpp  TestDivisionByZero.cpp  TestInitialization.cpp  TestMemoryLeak.cpp  TestNullPointer.cpp  TestUnitializedVariable.cpp  TestUseBeforeDef.cpp
tests/TemplateChecker/: README.md
tests/test_echo/: CMakeLists.txt  astlist.txt  config.txt  echo_test.cpp  example.cpp
tests/test_env/: hello_test.cpp
tests/test_uninit_var/: CMakeLists.txt  astlist.txt  example.cpp  uninit_var_test.cpp
tools/: CMakeLists.txt
tools/TemplateChecker/: main.cpp
tools/cli-analyzer/: CMakeLists.txt  cliAnalyzer.cpp
tools/gRPCServer/: CMakeLists.txt  server.cpp
